# tw-quant-bot

./: .gitignore  PROGRESS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STAGE2_REPORT.md  STAGE3_REPORT.md  STAGE4_REPORT.md  TRADING_GUIDE.md  UV_INTEGRATION_REPORT.md  UV_SETUP.md  auto_trading.py  bot_state.json  day_trading.py  daytrade-bot-smc.py  daytrade-bot-upgraded.py  daytrade-bot.py  main.py  monitor.py  monitor_6443.py  monitor_6443_hf.py  paper_trading.py  paper_trading_log.json  pyproject.toml  requirements.txt  run_2330.py  start_trading.sh  test_backtest.py  test_basic.py  test_ml_system.py  test_simple_backtest.py  trading_bot.py
bots/: failsafe-close-tw.py  failsafe-close-us.py  tw-daytrade-bot.py  us-daytrade-bot.py
bots/v2/core/: __init__.py  notification.py  risk_manager.py  smc_engine.py  trade_recorder.py
config/: config.json
credentials/: alpaca-credentials.example.json  shioaji-credentials.example.json
data/: backtest_buy_hold.json  backtest_ma_strategy.json  backtest_rsi_strategy.json
models/: stock_predictor_2330.pkl  stock_predictor_2409.pkl  stock_predictor_2603.pkl  stock_predictor_6443.pkl
src/backtest/: __init__.py  engine.py  metrics.py  order.py  strategy.py
src/data/: __init__.py  fetcher.py  fetcher_v2.py  processor.py
src/ml/: __init__.py  features.py  model.py  predictor.py
src/monitor/: __init__.py  scheduler.py  telegram_bot.py  web_ui.py
templates/: dashboard.html
